--- a/src/styles/templates/dashborad.css
+++ b/src/styles/templates/dashborad.css
@@ -1,5 +1,5 @@
 .container-dashborad{
-  padding-top: 50px;
+  padding-top: 20px;
   width: 100%;
   max-width: 1200px;
   padding-left: 15px;
@@ -18,12 +18,15 @@
   font-size: 14pt;
 }
 .container-dashborad > .subtitle-session{
-  margin-top: 20px;
-  margin-bottom: 50px;
+  margin-top: 15px;
+  margin-bottom: 40px;
 }
 .grid-dashborad{
   display: grid;
   grid-auto-rows: auto;
+  max-height: 50vh;
+  min-height: 50vh;
+  overflow: auto;
 }
 @media screen and (max-width: 768px) {
   .header-titles-dashborad, .header-value-details{
