--- a/src/styles/components/row-board.css
+++ b/src/styles/components/row-board.css
@@ -16,6 +16,13 @@
   width: 100%;
   height: 30px;
 }
+.container-red-green{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
 .itemes-row-board{
   display: none;
   font-family: 'Montserrat';
@@ -33,12 +40,22 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+.red{
+  background-color: red;
+  width: 10px;
+  height: 10px;;
+}
+.green {
+  background-color: green;
+  width: 10px;
+  height: 10px;
+  ;
+}
 @media screen and (max-width: 992px) {
 
   .container-row-board{
     max-width: 300px;
-    height: 750px;
+    height: auto;
     display: block;
     overflow-y: auto;
     padding-left: 10px;
