--- a/src/styles/components/row-board.css
+++ b/src/styles/components/row-board.css
@@ -10,7 +10,7 @@
   grid-template-columns: repeat(15, 1fr);
   text-align: center;
   margin-bottom: 5px;
-     
+
 }
 .container-text-row-board{
   width: 100%;
@@ -41,14 +41,18 @@
   text-overflow: ellipsis;
 }
 .red{
-  background-color: red;
-  width: 10px;
-  height: 10px;;
-}
-.green {
-  background-color: green;
+  background-color: #FC4326;
   width: 10px;
   height: 10px;
+  border: none;
+  border-radius: 15px;
+}
+.green {
+  background-color: #6CFB08;
+  width: 10px;
+  height: 10px;
+  border: none;
+  border-radius: 15px;
   ;
 }
 @media screen and (max-width: 992px) {
@@ -78,4 +82,10 @@
     justify-content: space-between;
     padding: 0px 0px;
   }
+}
+
+.box-titles-tabs-items {
+  display: flex;
+  width: 100%;
+  margin-left: 400px;
 }
