--- a/src/styles/templates/settings.css
+++ b/src/styles/templates/settings.css
@@ -22,6 +22,13 @@
   align-items: start;
 }
 
+.grid {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
 .grid-settings{
   display: grid;
   grid-auto-rows: auto;
@@ -55,7 +62,7 @@
   width: 100%;
   height: 50px;
   display: grid;
-  grid-template-columns: 30% 40% 30%;
+    grid-template-columns: 30% 40% 30%;
   text-align: center;
   vertical-align: middle;
   margin-top: 50px;
@@ -116,14 +123,17 @@
 }
 
 .settings {
-  margin-left: 150px;
   text-align: right;
   font-family: 'Montserrat';
   font-weight: 600;
   font-size: 14pt;
+  padding: 10px 10px;
+  margin-right: 50px;
 }
 
 .settings-input {
+  width: 100px;
+  height: 30px;
   margin-left: 20px;
   border-radius: 15px;
 }
@@ -143,6 +153,11 @@
 
 .grid-container {
   grid-auto-rows: 45%;
+}
+
+.verbosity {
+  display: inline-block;
+  width: 100%;
 }
 
 .tab {
@@ -249,4 +264,43 @@ form [class*="MuiSelect-select"], form [class*="MuiSelect-select"]:focus {
 
 .header-titles-settings {
   margin-top: 50px;
+}
+
+.box-titles-tabs-settings {
+  display: flex;
+  width: 100%;
+  margin-left: 340px;
+}
+
+.title-tab-settings{
+  width: 200px;
+  font-family: 'Montserrat';
+  font-weight: 600;
+  font-size: 18pt;
+  cursor: pointer ;
+  color: #bdbdbd;
+  text-align: center
+}
+
+.title-tab-settings-on{
+  width: 200px;
+  color: #29B6F6;
+  border-bottom: solid #29B6F6 1px;
+  text-align: center;
+}
+
+.box-titles-tabs{
+  display: inline-block;
+  width: 100%;
+  max-width: 500px;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.checkbox-inline {
+  font-size: 15px;
+}
+
+form [class*="MuiSwitch-icon"] {
+  color: #6CFB08;
 }
