--- a/src/styles/templates/dashboard.css
+++ b/src/styles/templates/dashboard.css
@@ -1,49 +1,149 @@
-.container-Dashboard{
-  padding-top: 20px;
-  width: 100%;
-  max-width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+.container-dashboard-new {
+    padding-top: 20px;
+    width: 100%;
+    max-width: 1400px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
-.header-titles-Dashboard{
+
+.container-header-board{
   display: grid;
-  grid-template-columns: repeat(4,1fr);
-  grid-template-rows: 50px;
-  align-items: center;
+  grid-template-columns: repeat(15, 1fr);
 }
-.header-value-details{
+
+.text-head-board{
+    font-family: 'Quicksand';
+    font-size: 12pt;
+    font-weight: bold;
+    line-height: 50px;
+    text-align: center;
+    white-space: nowrap;
+    width: 98%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #29B6F6;
+}
+
+.container-dashboard>.subtitle-session {
+    margin-top: 15px;
+    margin-bottom: 40px;
+}
+
+.container-board{
+  display: block;
+  margin-top: 20px;
+}
+
+.container-button {
   text-align: center;
+}
+
+.exchange-state {
+  width: 10px;
+  height: 10px;
+  background: #6CFB08;
+}
+
+.button {
+  display: inline-block;
+  width: 60px;
+  margin-right: 10px;
+}
+
+.button-active {
+  display: inline-block;
+  padding: 3px 6px;
+  margin-right: 10px;
+  background: #29B6F6;
+  border: none;
+  border-radius: 15px;
+  color: #fff;
+  font-family: 'Montserrat';
+  font-weight: bold;
+}
+
+.button-desactive {
+  display: inline-block;
+  padding: 5px 10px;
+  margin-right: 10px;
+  background: #A2B4C3;
+  border: none;
+  border-radius: 15px;
+  color: #fff;
+  font-family: 'Montserrat';
+  font-weight: bold;
+}
+
+.button-active-ex {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  margin-top: 16px;
+  background: #6CFB08;
+  border: none;
+  border-radius: 15px;
+  color: #fff;
+  font-family: 'Montserrat';
+  font-weight: bold;
+}
+
+.button-desactive-ex {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  margin-top: 16px;
+  background: #FC4326;
+  border: none;
+  border-radius: 15px;
+  color: #fff;
+  font-family: 'Montserrat';
+  font-weight: bold;
+}
+
+.box-titles-tabs{
+  display: flex;
+  width: 100%;
+  max-width: 500px;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.title-tab{
+  width: 400px;
   font-family: 'Montserrat';
   font-weight: 600;
-  font-size: 14pt;
+  font-size: 18pt;
+  cursor: pointer ;
+  color: #bdbdbd;
+  text-align: center;
+  display: inline-block;
 }
-.container-Dashboard > .subtitle-session{
-  margin-top: 15px;
-  margin-bottom: 40px;
+
+.title-tab-on{
+  width: 400px;
+  color: #29B6F6;
+  border-bottom: solid #29B6F6 1px
 }
-.grid-Dashboard{
-  display: grid;
-  grid-auto-rows: auto;
-  max-height: 50vh;
-  min-height: 50vh;
-  overflow: auto;
+
+.box-titles-tabs-items {
+  text-align: center;
 }
-@media screen and (max-width: 768px) {
-  .header-titles-Dashboard, .header-value-details{
-    display: none
-  }
-  .grid-Dashboard{
+
+@media screen and (max-width: 992px){
+  .container-board {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: auto;
-    grid-column-gap:  5px;
+    grid-template-columns: repeat(auto-fill, minmax(305px, 1fr));
+    justify-items: center
+  }
+  .container-header-board {
+    display: inline-block;
   }
 }
+
 @media screen and (max-width: 620px) {
-  .grid-Dashboard{
-    grid-template-columns: 1fr;
-  }
-  .container-Dashboard > .subtitle-session{
+  .container-dashboard > .subtitle-session{
     text-align: center;
   }
 }
