--- a/src/styles/templates/settings.css
+++ b/src/styles/templates/settings.css
@@ -6,7 +6,7 @@
   background-color: #f7f1f129;
   font-size: 15px;
   color: #fff;
-  padding-top: 0;
+  padding-top: 5px;
   font-family: 'Montserrat';
   font-weight: bold;
 }
@@ -15,44 +15,38 @@
   color: #000;
 }
 
-.container-title-settings {
-  width: 100%;
+.grid-settings{
   display: grid;
-  grid-template-columns: 40px 1fr;
-  align-items: start;
+  grid-auto-rows: auto;
+  max-height: 50vh;
+  min-height: 35vh;
+  overflow: auto;
 }
 
-.grid {
+ /* General */
+
+.grid-general {
   margin-top: 60px;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
-.grid-settings{
-  display: grid;
-  grid-auto-rows: auto;
-  max-height: 50vh;
-  min-height: 50vh;
-  overflow: auto;
-}
 
 @media screen and (max-width: 768px) {
   .header-titles-settings, .header-value-details{
     display: none
   }
-  .grid-settings{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: auto;
-    grid-column-gap:  5px;
-  }
+
+
 }
 
 @media screen and (max-width: 620px) {
   .grid-settings{
     grid-template-columns: 1fr;
+    height: 10px;
   }
+
 .container-settings > .subtitle-session{
   text-align: center;
   }
@@ -62,7 +56,7 @@
   width: 100%;
   height: 50px;
   display: grid;
-    grid-template-columns: 30% 40% 30%;
+  grid-template-columns: 30% 40% 30%;
   text-align: center;
   vertical-align: middle;
   margin-top: 50px;
@@ -100,6 +94,7 @@
 }
 
 .button-remove {
+  margin-top: 5px;
   width: 80px;
   max-width: 320px;
   height: 40px;
@@ -133,9 +128,12 @@
 
 .settings-input {
   width: 100px;
-  height: 30px;
-  margin-left: 20px;
+  height: 25px;
   border-radius: 15px;
+  font-size: 15px;
+  text-align: center;
+  border: none;
+  margin-top: 6px;
 }
 
 .switch-on {
@@ -158,6 +156,7 @@
 .verbosity {
   display: inline-block;
   width: 100%;
+  margin-left: 0;
 }
 
 .tab {
@@ -273,20 +272,22 @@ form [class*="MuiSelect-select"], form [class*="MuiSelect-select"]:focus {
 }
 
 .title-tab-settings{
-  width: 200px;
+  width: 170px;
   font-family: 'Montserrat';
   font-weight: 600;
   font-size: 18pt;
   cursor: pointer ;
   color: #bdbdbd;
-  text-align: center
+  text-align: center;
+  height: 50px;
 }
 
 .title-tab-settings-on{
-  width: 200px;
+  width: 170px;
   color: #29B6F6;
   border-bottom: solid #29B6F6 1px;
   text-align: center;
+  border-bottom: 2px #29B6F6 solid;
 }
 
 .box-titles-tabs{
@@ -299,8 +300,79 @@ form [class*="MuiSelect-select"], form [class*="MuiSelect-select"]:focus {
 
 .checkbox-inline {
   font-size: 15px;
+  height: 10px;
+  width: 60px;
+  padding-left: 0;
 }
 
-form [class*="MuiSwitch-icon"] {
-  color: #6CFB08;
+div [class*="MuiSwitch-icon"] {
+  color: #fff;
+}
+
+div [class*="MuiSwitch-icon"], div [class*="MuiSwitch-icon"]:focus {
+  color: #29b6f6;
+  margin-left: -30px
+}
+
+div [class*=".MuiSwitch-switchBase"] {
+  width: 20px;
+}
+
+div [class*="MuiSwitch-colorPrimary"] {
+
+}
+
+div [class*="MuiSwitchBase-input"] {
+  margin-left: 10px;
+}
+
+div [class*="MuiSwitch-root"] {
+  width: 30px !important;
+}
+
+.settings-range {
+  display: inline-block;
+  margin-top: 8px;
+  margin-left: 5px;
+  font-size: 15px !important;
+}
+
+.settings-slider {
+  display: inline-flex;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 40% !important;
+    height: 10px;
+    border-radius: 15px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #29B6F6;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
 }
